<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent" >
    
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="100dp"/>
    
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="100dp"/>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topGuideline"
        app:layout_constraintBottom_toTopOf="@id/bottomGuideline"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        app:layout_constrainedHeight="true">
        
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cardCornerRadius="8dp">
            
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mainContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/white">
                
                <TextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/base_test_string_1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black" />
    
                <ScrollView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constrainedHeight="true"
                    app:layout_constraintBottom_toTopOf="@id/dividerHorizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    app:layout_constraintVertical_bias="0.0">
    
                    <TextView
                        android:id="@+id/message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:paddingStart="10dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="8dp"
                        android:text="@string/base_test_string_3"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/black"
                        android:textSize="17dp" />

                </ScrollView>
                
                <TextView
                    android:id="@+id/confirmButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:paddingTop="14dp"
                    android:paddingBottom="14dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/base_action_confirm"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/holo_blue_dark" />
    
                <View
                    android:id="@+id/dividerHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/confirmButton"
                    android:background="@color/base_grey_40"/>
            
            </androidx.constraintlayout.widget.ConstraintLayout>
        
        </androidx.cardview.widget.CardView>
    
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
