<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialogContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99333333"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="8dp"
        app:cardCornerRadius="8dp"
        android:background="@android:color/transparent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constrainedHeight="true"
            android:background="@android:color/white"
            >

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/message"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:maxLines="1"
                android:gravity="center"
                android:ellipsize="end"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="TITLE"
                />

            <TextView
                android:id="@+id/message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintBottom_toTopOf="@+id/warningMessage"
                android:gravity="center"
                android:ellipsize="end"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textSize="16dp"
                android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="MESSAGE"
                />

            <TextView
                android:visibility="gone"
                android:id="@+id/warningMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/message"
                app:layout_constraintBottom_toTopOf="@id/textInput"
                android:gravity="center"
                android:ellipsize="end"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:textSize="10dp"
                android:textColor="@android:color/holo_red_dark"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="WARNING"
                />

            <EditText
                android:id="@+id/textInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/warningMessage"
                app:layout_constraintBottom_toTopOf="@id/dividerHorizontal"
                android:layout_marginStart="38dp"
                android:layout_marginEnd="38dp"
                android:layout_marginBottom="12dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:gravity="start|center_vertical"
                android:maxLines="1"
                android:inputType="text|textNoSuggestions"
                android:textSize="14dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/base_grey_40"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="HINT"
                android:maxLength="18"
                android:digits="@string/base_digit_alphabet_001"
                android:backgroundTint="@android:color/holo_blue_dark"
                 />
<!--            android:background="@drawable/rect_underline_blue_002"-->

            <TextView
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/dividerVertical"
                app:layout_constraintBottom_toBottomOf="parent"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:gravity="center"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/base_grey_40"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/base_action_cancel"
                />

            <View
                android:id="@+id/dividerVertical"
                android:layout_width="1dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toEndOf="@id/cancelButton"
                app:layout_constraintEnd_toStartOf="@+id/confirmButton"
                app:layout_constraintTop_toTopOf="@id/cancelButton"
                app:layout_constraintBottom_toBottomOf="@id/cancelButton"
                android:background="@color/base_grey_80"/>

            <TextView
                android:id="@+id/confirmButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/dividerVertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:maxLines="1"
                android:gravity="center"
                android:ellipsize="end"
                android:text="@string/base_action_confirm"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_dark"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />

            <View
                android:id="@+id/dividerHorizontal"
                android:layout_width="0dp"
                android:layout_height="1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/dividerVertical"
                android:background="@color/base_grey_80"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
